--- a/components/HeroSegment/styles.css
+++ b/components/HeroSegment/styles.css
@@ -8,11 +8,11 @@
 	width: 70%;
 	background-color: peru;
 	margin: 0 auto;
+	text-align: center;
 	height: 100vh;
-	display: flex;
-	justify-content: center;
 }
 
 .TitleContainer h1 {
 	color: blue;
+	margin: 0 auto;
 }
