--- a/components/HeroSegment/styles.css
+++ b/components/HeroSegment/styles.css
@@ -2,15 +2,20 @@
 	width: 100%;
 	background-color: blue;
 	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-image: url("../../public/assets/pig.jpeg");
+	background-size: cover;
 }
 
 .HeroContainer {
 	width: 70%;
 	background-color: peru;
-	margin: 0 auto;
+	max-width: 60%;
 	text-align: center;
-	height: 100vh;
 }
+
 
 .TitleContainer h1 {
 	color: blue;
