--- a/components/SearchBar/styles.css
+++ b/components/SearchBar/styles.css
@@ -2,6 +2,9 @@
 	border-radius: 10px;
 	border-style: none;
 	width: 200px;
-	height: 30px;
-	font-size: 1.5em;
+	height: 20px;
+	font-size: 1.2em;
+	padding: 5px;
+	margin-top: 10%;
+	margin-bottom: 10%;
 }
