--- a/src/Components/SearchBar/styles.css
+++ b/src/Components/SearchBar/styles.css
@@ -1,7 +1,7 @@
 .SearchBarContainer {
 	background-color: 'gray';
 	border-radius: 10px;
-	border-style: solid;
+	border-style: none;
 	width: 200px;
 	height: 20px;
 	font-size: 1.2em;
