--- a/src/Components/HeroSegment/styles.css
+++ b/src/Components/HeroSegment/styles.css
@@ -16,6 +16,18 @@
 }
 
 .TitleContainer h1 {
-	color: blue;
+	color: #F27A63;
 	margin: 0 auto;
+	font-size: 3.0em;
+	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 }
+
+.btn {
+	background-color: #F27A63;
+  border:none;
+  font-size:0.8em;
+  color:white;
+  width: 100px;
+  height: 30px;
+}
+
