--- a/src/Components/NavBar/styles.css
+++ b/src/Components/NavBar/styles.css
@@ -7,11 +7,14 @@
 .NavTitleContainer h1 {
 	color: #5B5B5B;
 	margin: 0 auto;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .navTab {
   list-style: none;
   padding: 0;
+  margin: 0;
   position: relative;
   display: table;
   width: 100%;
