--- a/src/Components/ExpenseSegment/styles.css
+++ b/src/Components/ExpenseSegment/styles.css
@@ -1,8 +1,9 @@
 .ExpenseSegment {
 	width: 100%;
 	height: 100vh;
-	background-color: #E8E9E8;
+	background-color: #F29885;
 	text-align: left;
+	border-bottom: solid 1px #5B5B5B;
 }
 
 .EDescription {
@@ -16,7 +17,7 @@
 .GraphContainer {
 	width: 50%;
 	height: 60vh;
-	background: white;
+	background: #F1F1F1;
 	float: right;
 	margin-top: 8.5em;
 	margin-right: 7%;
@@ -31,5 +32,8 @@
 	float: left;
 	width: 30%;
 	margin-left: 7%;
-	margin-top: 4em;
+	margin-top: 8.5em;
+	background: #F1F1F1;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
+	padding: 20px;
 }
