Adds tabs for graph key

--- a/src/Components/RevenueSegment/styles.css
+++ b/src/Components/RevenueSegment/styles.css
@@ -31,6 +31,7 @@
 .DescTitleContainer1 {
 	float: right;
 	width: 30%;
+	height: 50vh;
 	margin-right: 7%;
 	margin-top: 8.5em;
   background: #F1F1F1;
