Updates hero image

--- a/src/Components/HeroSegment/styles.css
+++ b/src/Components/HeroSegment/styles.css
@@ -6,7 +6,7 @@
 	align-items: center;
 	justify-content: center;
 	background-size: cover;
-	background-image: url('../../../public/background.jpeg');
+	background-image: url('../../../public/background-1.jpg');
 }
 
 .HeroContainer {
