--- a/src/Components/RevenueSegment/styles.css
+++ b/src/Components/RevenueSegment/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 .RevenueSegment1 {
 	width: 100%;
 	height: 100vh;
@@ -31,10 +33,35 @@
 .DescTitleContainer1 {
 	float: right;
 	width: 30%;
-	height: 50vh;
+	height: 55vh;
 	margin-right: 7%;
 	margin-top: 8.5em;
   background: #F1F1F1;
   box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
   padding: 20px;
+}
+
+ul {
+	list-style-type: none;
+	line-height: 50px;
+}
+
+.li1 {
+	color: #ACDFD2;
+}
+.li2 {
+	color: #DCDA98;
+}
+.li3 {
+	color: #F29885;
+}
+.li4 {
+	color: #aba0ca;
+}
+.li5 {
+	color: #A4A8A4;
+}
+
+.Description {
+	letter-spacing: 3px;
 }
