--- a/src/Components/BubbleSegment/styles.css
+++ b/src/Components/BubbleSegment/styles.css
@@ -23,14 +23,14 @@
 
 }
 
-.GraphContainer {
+/*.GraphContainer {
   width: 100%;
   height: 60vh;
   background: #F1F1F1;
   margin-top: 8.5em;
   margin-right: 7%;
     box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
-}
+}*/
 
 .GraphDescContainer {
   width: 100%;
