--- a/src/Components/BubbleSegment/styles.css
+++ b/src/Components/BubbleSegment/styles.css
@@ -23,14 +23,16 @@
 
 }
 
-/*.GraphContainer {
-  width: 100%;
-  height: 60vh;
+.BubbleGraphContainer {
+  width: 90%;
+  height: 75vh;
   background: #F1F1F1;
-  margin-top: 8.5em;
-  margin-right: 7%;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  margin-right: 5%;
+  margin-left: 5%;
     box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
-}*/
+}
 
 .GraphDescContainer {
   width: 100%;
