--- a/src/Components/ExpenseSegment/styles.css
+++ b/src/Components/ExpenseSegment/styles.css
@@ -16,8 +16,8 @@
 
 }
 
-.GraphContainer {
-	width: 50%;
+.GraphContainer2 {
+	width: 45%;
 	height: 60vh;
 	background: #F1F1F1;
 	float: right;
@@ -26,7 +26,7 @@
 	box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
 }
 
-.GraphDescContainer {
+.GraphDescContainer2 {
 	width: 100%;
 }
 
