--- a/src/Components/NavBar/styles.css
+++ b/src/Components/NavBar/styles.css
@@ -3,8 +3,9 @@
   z-index: 9999;
   background: #E8E9E8;
   top: 0;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.1), 0 -14px 14px rgba(0,0,0,0.1),0 -2px 10px rgba(0,0,0,0.1);
 }
+
 
 .NavTitleContainer {
   width: 100vw;
