--- a/src/Components/ExpenseSegment/styles.css
+++ b/src/Components/ExpenseSegment/styles.css
@@ -3,9 +3,9 @@
 .ExpenseSegment {
 	width: 100%;
 	height: 100vh;
-	background-color: #F29885;
+	background-color: #E8E9E8;
 	text-align: left;
-	border-bottom: solid 1px #5B5B5B;
+  border-bottom: solid 1px #E8E9E8;
 }
 
 .EDescription {
@@ -13,31 +13,50 @@
 }
 
 .DescriptionTitle {
-
+	width: 90%;
+	color: white;
+	font-size: 2em;
+	background: #5B5B5B;
+	padding: 10px;
+	margin-top: 20px;
+	margin-left: -20px;
+	box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
 }
 
 .GraphContainer2 {
-	width: 27%;
-	padding-top: 1%;
-	background: #F1F1F1;
-	float: right;
-	margin-top: 8.5em;
-	margin-right: 15%;
-	box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
+	height: 85%;
+	width: 65%;
+	margin-top: 3%;
+	margin-right: 5%;
 }
 
-.GraphDescContainer2 {
+.CanvasContainer {
+	height: 68vh;
+	padding: 0;
+	background: #F9F9F9;
+	float: right;
+	margin-top: 8.5em;
+	margin-right: 5%;
+	box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
+	width: 50%;
+}
+
+.GraphDescContainer {
 	width: 100%;
 }
 
 .DescTitleContainer {
+	color: #5B5B5B;
 	float: left;
 	width: 30%;
-	height: 55vh;
+	height: 68vh;
 	margin-left: 7%;
 	margin-top: 8.5em;
-	background: #F1F1F1;
-	box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
+  background: #FFCFA1;
+  box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
+}
+
+.DescTitleContainer p {
 	padding: 20px;
 }
 
@@ -64,4 +83,8 @@ ul {
 
 .Description {
 	letter-spacing: 3px;
+}
+
+.scrollbox {
+	z-index: 2
 }
