--- a/src/Components/NavBar/styles.css
+++ b/src/Components/NavBar/styles.css
@@ -1,9 +1,10 @@
 .NavBarContainer {
   position: relative;
   z-index: 1000;
-  background: #E8E9E8;
+  background: #5B5B5B;
   top: 0;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.1), 0 -14px 14px rgba(0,0,0,0.1),0 -2px 10px rgba(0,0,0,0.1);
+  color: white;
+  box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
 }
 
 
@@ -40,18 +41,19 @@
   font-size: 13px;
 }
 
-.active {
-  border-bottom: solid 5px #F27A63;
-}
-
 .navTab li a {
   display: block;
   white-space: nowrap;
   text-decoration: none;
-  text-transform: uppercase;
   cursor: pointer;
   overflow: hidden;
   position: relative;
+  font-size: 1.5em;
+}
+
+.active {
+  background: #FFCFA1;
+  color: #5B5B5B;
 }
 
 .marker {
