--- a/src/Components/SearchBar/styles.css
+++ b/src/Components/SearchBar/styles.css
@@ -14,6 +14,7 @@
 	padding-bottom: 5px;
 	padding-left: 5px;
 	padding-right: 5px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .SearchContent {
@@ -29,7 +30,8 @@
 .SearchBtnContainer button {
 	padding: 0px;
 	margin: 0;
-	height: 100%;
+	height: 90%;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .SearchTitle {
