--- a/src/Components/ExpenseSegment/styles.css
+++ b/src/Components/ExpenseSegment/styles.css
@@ -15,7 +15,8 @@
 .DescriptionTitle {
 	width: 90%;
 	color: white;
-	font-size: 2em;
+	font-size: 1.3em;
+	letter-spacing: 2px;
 	background: #5B5B5B;
 	padding: 10px;
 	margin-top: 20px;
@@ -49,20 +50,52 @@
 	color: #5B5B5B;
 	float: left;
 	width: 30%;
-	height: 68vh;
+	height: 35vh;
 	margin-left: 7%;
 	margin-top: 8.5em;
   background: #FFCFA1;
   box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
 }
 
+.SalaryTable {
+	margin-top: 30px;
+}
+
+.SalariesDescContainer {
+	color: #5B5B5B;
+	float: left;
+	width: 30%;
+	height: 29vh;
+	position: absolute;
+	margin-left: 7%;
+	margin-top: 27em;
+	background: #FFCFA1;
+	box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
+}
+
 .DescTitleContainer p {
 	padding: 20px;
 }
 
-ul {
-	list-style-type: none;
-	line-height: 50px;
+.ExpenseTable td {
+	padding-left: 30px;
+	font-size: 1.3em;
+}
+
+.SalaryTable td {
+	font-size: 1.3em;
+}
+
+.SalaryTD {
+	padding-left: 36%;
+}
+
+.EmployeeName {
+	padding-left: 30px;
+}
+
+.EDescription table {
+	padding-left: 10px;
 }
 
 .li1 {
