--- a/src/Components/RevenueSegment/styles.css
+++ b/src/Components/RevenueSegment/styles.css
@@ -26,8 +26,8 @@
 .GraphContainer1 {
 	height: 85%;
 	width: 65%;
-	margin-top: 3%;
-	margin-left: 5%;
+	margin: 0 auto;
+	margin-top: 30px;
 }
 
 .CanvasContainer {
