--- a/src/Components/NavBar/styles.css
+++ b/src/Components/NavBar/styles.css
@@ -1,10 +1,15 @@
 .NavBarContainer {
   position: relative;
   z-index: 1000;
+  z-index: 99 !important;
   background: #5B5B5B;
   top: 0;
   color: white;
   box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
+}
+
+.sticky {
+  z-index: 1000;
 }
 
 
