add scroll to cards

--- a/src/Components/AboutSegment/styles.css
+++ b/src/Components/AboutSegment/styles.css
@@ -54,9 +54,10 @@
 .AboutCard {
 	background-color: white;
 	width: 80%;
-	padding: 20px;
+	padding: 50px;
 	height: 300px;
 	margin: 0 auto;
 	margin-bottom: 20px;
 	box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
+	overflow: scroll;
 }
