--- a/src/Components/BubbleSegment/styles.css
+++ b/src/Components/BubbleSegment/styles.css
@@ -3,7 +3,7 @@
 .BubbleSegment {
   width: 100%;
   height: 100%;
-  background-color: #5E5FFF;
+  background-color: #A4A8A4;
   border-bottom: solid 1px #5B5B5B;
 }
 
