--- a/src/Components/ExpenseSegment/styles.css
+++ b/src/Components/ExpenseSegment/styles.css
@@ -36,15 +36,17 @@
 	padding-top: 20px;
 	width: 90%;
 	margin: 0 auto;
+	margin-bottom: 5px;
 	text-align: center;
 	font-size: 20px;
 	letter-spacing: 2px;
 }
 
-.LabelContainer p {
-	display: inline;
+.LabelContainer div {
+	display: inline-block;
 	padding: 10px;
-	width: 25%;
+	width: 170px;
+	padding: 0;
 	margin: 0;
 }
 
@@ -99,6 +101,12 @@
 @media (min-width: 1220px) {
 	.DescTitleContainer {
 		height: 37vh;
+	}
+}
+
+@media (max-width: 790px) {
+	.LabelContainer {
+		display: none;
 	}
 }
 
