--- a/src/Components/BubbleSegment/styles.css
+++ b/src/Components/BubbleSegment/styles.css
@@ -26,22 +26,37 @@
   margin-top: 0;
 }
 
+#theBubbles {
+  width: 90%;
+  background-color: white;
+}
+
+.BubbleTopContainer {
+  text-align: center;
+  min-width: 1337px;
+}
+
 .BubbleGraphContainer {
   width: 90%;
-  height: 75vh;
-  background: #F1F1F1;
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
+  background: white;
   margin-right: 5%;
   margin-left: 5%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
+}
+
+.BubbleDescTitle {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+}
+.BubbleDescTitle h2 {
+  margin: 0; 
 }
 
 .GraphDescContainer {
   width: 100%;
   height: 100vh;
 }
-
 
 .Description {
   letter-spacing: 3px;
