add style to buttons

--- a/src/Components/BubbleSegment/styles.css
+++ b/src/Components/BubbleSegment/styles.css
@@ -70,10 +70,24 @@
 
 #all{
   float: left;
+  background-color: #5E5FFF;
+  border:none;
+  font-size:0.8em;
+  color: white;
+  margin-top: 3%;
+  width: 100px;
+  height: 30px;
 }
 
 #group{
   float: right;
+  background-color: #5E5FFF;
+  border:none;
+  font-size:0.8em;
+  color: white;
+  margin-top: 3%;
+  width: 100px;
+  height: 30px;
 }
 
 /*.button.active {
