add back to top

--- a/src/Components/Footer/styles.css
+++ b/src/Components/Footer/styles.css
@@ -38,3 +38,9 @@
   background-size: contain;
   background-image: url('../../../public/icon.png');
 }
+
+.FooterTop {
+  position: absolute;
+  width: 100vw;
+  transform: translate(50%,-20px);
+}
