--- a/src/Components/BubbleSegment/styles.css
+++ b/src/Components/BubbleSegment/styles.css
@@ -21,9 +21,10 @@
 
 #BubbleDesc {
   width: 100%;
-  color: #5B5B5B;
-  background-color: #FFCFA1;
+  color: white;
+  background-color: #5B5B5B;
   margin-top: 0;
+  box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
 }
 
 #theBubbles {
@@ -32,6 +33,7 @@
 }
 
 .BubbleTopContainer {
+  padding-top: 3%;
   text-align: center;
 }
 
@@ -66,6 +68,18 @@
 .Description {
   letter-spacing: 3px;
 }
+
+#BackTopButton {
+  position: absolute;
+  background-color: #5E5FFF;
+  border:none;
+  font-size:0.8em;
+  color: white;
+  width: 70px;
+  height: 70px;
+  border-radius: 50px;
+  float: center;
+  transform: translate(50%, 500px);}
 
 #all{
   float: left;
@@ -117,6 +131,12 @@
   background-color: #F1F1F1;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+
+#bub1 {
+ padding-top: 10px;
+ padding-bottom: 10px;
+ font-size: 1.7em; 
 }
 
 
