--- a/src/Components/Footer/styles.css
+++ b/src/Components/Footer/styles.css
@@ -42,5 +42,25 @@
 .FooterTop {
   position: absolute;
   width: 100vw;
-  transform: translate(50%,-20px);
+  transform: translate(52.5%,-20px);
 }
+.FooterTriangleContainer {
+  position: absolute;
+  width: 100vw;
+  transform: translate(51%, -28px);
+}
+.FooterTriangle {
+  width: 0; 
+  height: 0; 
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  border-bottom: 30px solid #424242;
+}
+
+#FooterLink {
+  color: white;
+  transform: translate(-15px, 8px);
+  font-size: 0.8em;
+  z-index: 999px;
+}
+
