--- a/src/Components/ExpenseSegment/styles.css
+++ b/src/Components/ExpenseSegment/styles.css
@@ -129,10 +129,15 @@
   box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
 }
 
-.SalaryTable {
-	margin-top: 30px;
-}
 
+.SalariesContainer {
+	padding-left: 30px;
+	width: 100%;
+	display: inline-block;
+}
+.Salarydiv {
+	display: inline-block;
+}
 .SalariesDescContainer {
 	color: #5B5B5B;
 	float: left;
@@ -141,6 +146,7 @@
 	position: absolute;
 	margin-left: 7%;
 	margin-top: 27em;
+	min-height: 200px;
 	background: #FFCFA1;
 	box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
 }
@@ -149,22 +155,14 @@
 	padding: 20px;
 }
 
-.ExpenseTable td {
-	padding-left: 30px;
-	font-size: 1.3em;
-}
-
-.SalaryTable td {
-	display: inline-block;
-	font-size: 1.2em;
-}
-
 .SalaryTD {
 	padding-left: 15%;
 }
 
 .EmployeeName {
-	padding-left: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
+	display: inline-block;
 }
 
 .EDescription table {
